--- a/index.html
+++ b/index.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>User Input</title>
+    <title>Welcome to my website</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
-      <h1>User Input</h1>
+      <h1>Welcome Buddy!!</h1>
     </header>
 
     <section class="container">
       <form id="my-form">
-        <h1>Add User</h1>
+        <h1>Enter your name</h1>
 
         <div class="msg"></div>
         
         <div>
-          <label for="name">Name:</label>
-          <input type="text" id="name">
+          <label for="first_name">First Name:</label>
+          <input type="text" id="first_name" placeholder="Enter your first name">
         </div>
         <div>
-          <label for="email">Email:</label>
-          <input type="email" id="email">
+          <label for="last_name">Last Name:</label>
+          <input type="text" id="last_name" placeholder="Enter your last name">
         </div>
         <input class="btn" type="submit" value="Submit">
       </form>
